# shutterscout-ai

./: .gitignore  README.md  hello.py  photography_location_recommendations.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: smulface.md
src/shutterscout_ai/: main.py
src/shutterscout_ai/core/: shutterscout_agent.py
src/shutterscout_ai/tools/astronomy/: astronomy.py
src/shutterscout_ai/tools/combined/: combiner.py
src/shutterscout_ai/tools/location/: location.py
src/shutterscout_ai/tools/photos/: photos.py
src/shutterscout_ai/tools/places/: places.py
src/shutterscout_ai/tools/weather/: weather.py
tests/tools/astronomy/: test_astronomy.py
tests/tools/location/: test_location.py
tests/tools/photos/: test_photos.py
tests/tools/places/: test_places.py
tests/tools/weather/: test_weather.py
