[project]
name = "shutterscout-ai"
version = "0.1.0"
description = "ShutterScout.ai is an intelligent photography assistant that helps photographers find and capture the perfect shot by combining location data, environmental conditions, and photographic expertise. The system leverages multiple APIs and artificial intelligence to provide comprehensive recommendations for photography locations, including optimal timing, equipment suggestions, and practical preparation advice."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
