[project]
name = "shutterscout-ai"
version = "0.1.0"
description = "ShutterScout.ai is an intelligent photography assistant that helps photographers find and capture the perfect shot by combining location data, environmental conditions, and photographic expertise. The system leverages multiple APIs and artificial intelligence to provide comprehensive recommendations for photography locations, including optimal timing, equipment suggestions, and practical preparation advice."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.3",
    "smolagents>=1.8.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shutterscout_ai"]

[project.scripts]
kubevox = "shutterscout_ai.cli:app"

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default
lint.select = ["E", "F", "I"]
# Allow unused variables when underscore-prefixed
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Python version compatibility
target-version = "py312"
# Line length matches black's default
line-length = 120

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "hatch>=1.14.0",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
]
